Prevent overflow in My Order menu   - `MyOrder.module.scss` max-height defined to 400px   - `next.config.js` add domain

--- a/src/styles/MyOrder.module.scss
+++ b/src/styles/MyOrder.module.scss
@@ -4,6 +4,7 @@
   width: 360px;
   position: fixed;
   height: fit-content;
+  max-height: 400px;
   overflow-y: auto;
   padding: 24px;
   box-sizing: border-box;
